- Bug #1382: Fixed space removal in CDbCriteria::compare() (Sam Dark)
- Bug #1384: SET NAMES problem with MSSQL PDO Provider (Qiang)
- Bug #1404: CSecurityManager::validateData() fails when the data is an array (Qiang)
- Bug #1408: CDbAuthManager may throw exception when unserializing data from auth items in PHP 5.3 (Qiang)
- Enh #1073: Allow dependencies to be set in constructor of CChainedCacheDependency. Also allow dependencies to be specified as configurations. (Qiang)
- Enh #1358: Enhanced the 'together' option of HAS_MANY/MANY_MANY relations so that setting it true will ensure the related table is joined with the primary table in a single SQL (Qiang)
- Enh #1359: Added CActiveRecord::countByAttributes (Qiang)
- Enh #1361: Added linkLabelWrapper, firstItemCssClass and lastItemCssClass to CMenu (Qiang)
- Enh #1366: Added CListView::itemsTagName (Qiang)
- Enh #1371: Improved js code in gii view templates to allow easier subclassing (Qiang)
- Enh #1392: Added CCaptchaAction::fixedVerifyCode (Qiang)
- Enh #1400: Enhanced CActiveRecord::getAttributeLabel() to support returning labels for related object's attribute (Qiang)
- Enh #1412: Yii::import() now throws an exception when trying to include nonexisting PHP file (Qiang)
- Enh #1433: Added CMessageSource::forceTranslation (Qiang)
- Enh #1434: Added zii message translation in Italian (enrico.detoma)
- Enh: Added CValidator::safe to allow marking a validator as safe or unsafe (Qiang)
- Chg #1309: CHttpRequest::getPathInfo() now always returns decoded results (Qiang)
- New: Upgraded JQuery UI to 1.8.2 (Sam Dark)

Version 1.1.3 July 4, 2010
--------------------------
- Bug #856: Logout doesn't work when CWebUser::identityCookie is configured and allowAutoLogin is set true (Qiang)
- Bug #1027: CButtonColumn->buttons is ignored (Sam Dark)
- Bug #1039: Table prefix feature did not work with PostgreSQL and AR (Qiang)
- Bug #1046: Fixed the bug that CDbFixtureManager did not properly initialize the fixture data (Qiang)